# lightfm

./: pyproject.toml  setup.py
lightfm/: _lightfm_fast.pyx.template  _lightfm_fast_no_openmp.c  _lightfm_fast_openmp.c
